--- a/src/views/options/index.html
+++ b/src/views/options/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" id="Theme">
 
   <script src="/views/options/components/command-select/main.js" type="module"></script>
+  <script src="/views/options/components/command-multi-select/main.js" type="module"></script>
   <script src="/views/options/components/popup-box/main.js" type="module"></script>
   <script src="/views/options/components/color-picker/main.js" type="module"></script>
 
