--- a/src/views/options/index.html
+++ b/src/views/options/index.html
@@ -14,7 +14,6 @@
 
   <script src="/views/options/main.js" type="module"></script>
   <script src="/views/options/gestures.js" type="module"></script>
-  <script src="/views/options/settings.js" type="module"></script>
   <script src="/views/options/exclusions.js" type="module"></script>
   <script src="/views/options/about.js" type="module"></script>
 </head>
@@ -56,9 +55,9 @@
     </ul>
 
     <form id="themeSwitch">
-      <input type="radio" class="theme-button theme-light" name="theme" value="light">
-      <input type="radio" class="theme-button theme-dark" name="theme" value="dark">
-      <input type="radio" class="theme-button theme-high-contrast" name="theme" value="highContrast">
+      <input type="radio" class="theme-button theme-light" name="theme" value="light" data-config="Settings.General.theme">
+      <input type="radio" class="theme-button theme-dark" name="theme" value="dark" data-config="Settings.General.theme">
+      <input type="radio" class="theme-button theme-high-contrast" name="theme" value="highContrast" data-config="Settings.General.theme">
     </form>
   </div>
 
