--- a/src/views/options/layout.css
+++ b/src/views/options/layout.css
@@ -457,33 +457,33 @@ h2 {
  **/
 
 .toggle-button {
-  display: none;
-}
-
-.toggle-button + label {
+  appearance: none;
   display: inline-block;
-  width: 45px;
+  width: 47px;
   padding: 8px 0 6px 0;
-  border: 1px solid var(--border-color);
+  margin-left: 10px;
+  border: 1px solid var(--border-color, #ddd);
   border-radius: 2px;
-  background: var(--base-color);
-  color: var(--text-color);
+  background: var(--base-color, #FFF);
+  color: var(--text-color, #555555);
   text-align: center;
+  font-size: 1rem;
+  font-family: inherit;
   transition: background .5s;
 }
 
-.toggle-button + label:after {
+.toggle-button::after {
   content: "__MSG_toggleButtonOff__";
 }
 
-.toggle-button:checked + label:after {
+.toggle-button:checked::after {
   content: "__MSG_toggleButtonOn__";
 }
 
-.toggle-button:checked + label {
-  border-color: var(--highlighted-color);
-  background: var(--highlighted-color);
-  color: var(--textSecond-color);
+.toggle-button:checked {
+  border-color: var(--highlighted-color, #00AAA0);
+  background: var(--highlighted-color, #00AAA0);
+  color: var(--textSecond-color, #FFF);
 }
 
 /**
