--- a/src/views/options/index.html
+++ b/src/views/options/index.html
@@ -15,7 +15,7 @@
   <script src="/views/options/main.js" type="module"></script>
   <script src="/views/options/gestures.js" type="module"></script>
   <script src="/views/options/exclusions.js" type="module"></script>
-  <script src="/views/options/about.js" type="module"></script>
+  <script src="/views/options/data-management.js" type="module"></script>
 </head>
 
 <body>
