started renaming js files with modules to mjs due to linter error (https://github.com/mozilla/addons-linter/issues/3639)

--- a/src/views/installation/index.html
+++ b/src/views/installation/index.html
@@ -5,7 +5,7 @@
   <title>Gesturefy - Welcome</title>
   <link rel="icon" type="image/png" href="/resources/img/iconx32.png" sizes="16x16">
   <link rel="stylesheet" href="layout.css">
-  <script src="main.js" type="module"></script>
+  <script src="main.mjs" type="module"></script>
 
   <script src="/core/content.js" type="module"></script>
   <link rel="stylesheet" href="/core/views/mouse-gesture-view/mouse-gesture-view.css">
