--- a/src/views/options/index.html
+++ b/src/views/options/index.html
@@ -7,15 +7,15 @@
   <link rel="stylesheet" href="/views/options/layout.css">
   <link rel="stylesheet" id="Theme">
 
-  <script src="/views/options/components/command-select/main.js" type="module"></script>
-  <script src="/views/options/components/command-multi-select/main.js" type="module"></script>
-  <script src="/views/options/components/popup-box/main.js" type="module"></script>
-  <script src="/views/options/components/color-picker/main.js" type="module"></script>
+  <script src="/views/options/components/command-select/main.mjs" type="module"></script>
+  <script src="/views/options/components/command-multi-select/main.mjs" type="module"></script>
+  <script src="/views/options/components/popup-box/main.mjs" type="module"></script>
+  <script src="/views/options/components/color-picker/main.mjs" type="module"></script>
 
-  <script src="/views/options/main.js" type="module"></script>
-  <script src="/views/options/gestures.js" type="module"></script>
-  <script src="/views/options/exclusions.js" type="module"></script>
-  <script src="/views/options/data-management.js" type="module"></script>
+  <script src="/views/options/main.mjs" type="module"></script>
+  <script src="/views/options/gestures.mjs" type="module"></script>
+  <script src="/views/options/exclusions.mjs" type="module"></script>
+  <script src="/views/options/data-management.mjs" type="module"></script>
 </head>
 
 <body>
