Restructure and rename files
Transformed workaround directory into more meaningfull folders and files. Renamed all module file extensions from .js to .mjs and simplified the bundeling process.

--- a/src/views/installation/index.html
+++ b/src/views/installation/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="layout.css">
   <script src="main.mjs" type="module"></script>
 
-  <script src="/core/content.js" type="module"></script>
+  <script src="/core/content.mjs" type="module"></script>
   <link rel="stylesheet" href="/core/views/mouse-gesture-view/mouse-gesture-view.css">
 </head>
 
