Replace png icons with svg icon

--- a/src/views/options/index.html
+++ b/src/views/options/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Gesturefy</title>
-  <link rel="icon" type="image/png" href="/resources/img/iconx32.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="/resources/img/icon.svg" sizes="16x16">
   <link rel="stylesheet" href="/views/options/layout.css">
   <link rel="stylesheet" id="Theme">
 
@@ -19,7 +19,7 @@
 
 <body>
   <div id ="Sidebar">
-    <img class="logo" src="/resources/img/iconx96.png">
+    <img class="logo" src="/resources/img/icon.svg">
     <ul class="navigation">
       <li class="nav-item">
         <a href="#Gestures">
