Improve options responsiveness

--- a/src/views/options/layout.css
+++ b/src/views/options/layout.css
@@ -153,57 +153,57 @@ h2 {
  * Icons classes
  **/
 
-.icon-gear:after {
+.icon-gear::before  {
   content: "g";
   font-family: Icons;
 }
 
-.icon-arrows:after {
+.icon-arrows::before  {
   content: "a";
   font-family: Icons;
 }
 
-.icon-star:after {
+.icon-star::before  {
   content: "s";
   font-family: Icons;
 }
 
-.icon-list:after {
+.icon-list::before  {
   content: "l";
   font-family: Icons;
 }
 
-.icon-info:after {
+.icon-info::before {
   content: "i";
   font-family: Icons;
 }
 
-.icon-arrow-up:after {
+.icon-arrow-up::before {
   content: "U";
   font-family: Icons;
 }
 
-.icon-arrow-right:after {
+.icon-arrow-right::before {
   content: "R";
   font-family: Icons;
 }
 
-.icon-arrow-down:after {
+.icon-arrow-down::before {
   content: "D";
   font-family: Icons;
 }
 
-.icon-arrow-left:after {
+.icon-arrow-left::before {
   content: "L";
   font-family: Icons;
 }
 
-.icon-delete:after {
+.icon-delete::before {
   content: "X";
   font-family: Icons;
 }
 
-.icon-add:after {
+.icon-add::before {
   content: "+";
   font-family: Icons;
 }
@@ -428,14 +428,13 @@ h2 {
 }
 
 .ol-label {
-  flex-basis: 275px;
-  flex-grow: 1;
+  flex-basis: 250px;
+  flex-grow: 10;
   cursor: default;
 }
 
 .ol-input {
-  display: flex;
-  margin-left: auto;
+  display: contents;
 }
 
 .ol-description {
@@ -491,7 +490,9 @@ h2 {
  **/
 
 .input-field {
-  width: 140px;
+  flex-grow: 1;
+  flex-basis: 140px;
+  min-width: 0;
   box-sizing: border-box;
   padding: 5px;
   border: 1px solid var(--border-color);
@@ -533,6 +534,8 @@ h2 {
 
 .select-wrapper {
   position: relative;
+  flex-grow: 1;
+  flex-basis: 140px;
 }
 
 .select-wrapper:after {
@@ -548,7 +551,7 @@ h2 {
 }
 
 .select-field {
-  width: 140px;
+  width: 100%;
   box-sizing: border-box;
   padding: 4px 25px 4px 5px;
   border: 1px solid var(--border-color);
@@ -581,7 +584,7 @@ h2 {
  **/
 
 .button {
-  min-width: 142px;
+  min-width: 9em;
   box-sizing: border-box;
   padding: 8px 6px 6px 6px;
   border: 1px solid var(--border-color);
@@ -641,7 +644,9 @@ label.button > span {
  **/
 
 .command-select-field {
-  width: 140px;
+  flex-grow: 1;
+  flex-basis: 140px;
+  min-width: 0;
   border: 1px solid var(--border-color);
   border-radius: 2px;
   background-color: var(--base-color);
