--- a/src/views/options/layout.css
+++ b/src/views/options/layout.css
@@ -725,46 +725,6 @@ label.button > span {
   color: var(--highlighted-color);
 }
 
-.gesture-list::before {
-  position: absolute;
-  display: block;
-  margin-top: 30vh;
-  visibility: hidden;
-  opacity: 0;
-  color: var(--text-color);
-  content: "m";
-  font-family: Icons;
-  text-align: center;
-  font-size: 36px;
-  grid-column: 1 / -1;
-}
-
-.gesture-list.empty::before {
-  position: static;
-  visibility: visible;
-  opacity: .5;
-  transition: opacity .3s;
-}
-
-.gesture-list::after {
-  position: absolute;
-  display: block;
-  visibility: hidden;
-  opacity: 0;
-  color: var(--text-color);
-  content: attr(data-no-results-hint);
-  text-align: center;
-  font-size: 22px;
-  grid-column: 1 / -1;
-}
-
-.gesture-list.empty::after {
-  position: static;
-  visibility: visible;
-  opacity: .5;
-  transition: opacity .3s;
-}
-
 /**
  * Gesture list add button
  **/
@@ -809,14 +769,16 @@ label.button > span {
   background-color: var(--base-color);
   box-shadow: none;
   cursor: pointer;
-  transition: box-shadow .3s;
+  transition: box-shadow .3s, opacity .3s;
 }
 
-.gl-item[hidden] {
-  display: none;
+.gl-item.hidden {
+  opacity: 0.2;
+  pointer-events: none;
 }
 
-.gl-item:hover {
+.gl-item:hover,
+.searching > .gl-item:not(.hidden) {
   box-shadow: 0 0 10px -4px var(--shadow-color);
 }
 
